--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -83,7 +83,7 @@
     </main>
 
     <footer>
-        <p>Site criado com <span id="nome-destaque">Jean Vinicius</span>.</p>
+        <p>Site criado por <span id="nome-destaque">Jean Vinicius</span>.</p>
     </footer>
 </body>
 </html>
