--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -24,7 +24,7 @@
                 Vou dizer tudo em poesia.</p>
         </section>
         
-        <section class="fundo_image">
+        <section class="fundo_image" id="background01">
             <p>Não é mais como era antes <br>
                 É tudo abreviado <br>
                 "Você" só tem duas letras <br>
@@ -52,7 +52,7 @@
                 Decifre esse rabisco.</p>
         </section>
         
-        <section class="fundo_image">
+        <section class="fundo_image" id="background02">
             <p>Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
                 Mandava no mês de Junho <br>
