--- a/exercicios/ex023/tabela06.html
+++ b/exercicios/ex023/tabela06.html
@@ -13,7 +13,8 @@
         }
 
         h1 {
-            font-size: 2.5em;
+            font-size: 2em;
+            text-align: left;
         }
 
         div#container {
