atualizei o iframe03.html

--- a/exercicios/ex024/iframe03.html
+++ b/exercicios/ex024/iframe03.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea dolor officiis voluptatibus neque blanditiis iure incidunt quam atque totam. Placeat ipsa itaque aperiam necessitatibus nihil, dolor amet tenetur aliquid nobis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor eum suscipit, iste minus provident quasi itaque cupiditate quam, dolores fuga expedita amet voluptatibus aliquid. Dolor reiciendis beatae fugiat odit eius.</p>
 
-    <iframe name="frame" src="" frameborder="1"></iframe>
+    <iframe name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <img src='imagens/cursoemvideo.png'>" frameborder="1"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi eos corrupti non laboriosam ea, totam nam obcaecati, saepe fuga facilis ab ipsa quo quia accusamus atque quam dignissimos ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis autem deleniti enim corrupti pariatur assumenda molestiae quos! Illum voluptatibus doloribus, magnam, beatae provident molestias officiis adipisci saepe architecto qui velit?</p>
 </body>
