Atualizei a versão mobile
Atualizei a versão mobile do exercício 26 Media Query 05

--- a/exercicios/ex026/mq05.html
+++ b/exercicios/ex026/mq05.html
@@ -13,14 +13,14 @@
     <header>
         <h1 id="tituloSite" >Meu site</h1>
         <span id="iconMenu" class="material-icons" onclick="exbirMenu()">&#xe5d2</span>
-        <section id="backgroundMenu" onclick="ocultarMenu()"></section>  
+        <div id="backgroundMenu" onclick="ocultarMenu()"></div>
         <menu id="menu">
             <ul id="ulMenu">
-                <li><a id="linkMenu01" href="#">opção 1</a></li>
-                <li><a id="linkMenu02" href="#">opção 2</a></li>
-                <li><a id="linkMenu03" href="#">opção 3</a></li>
-                <li><a id="linkMenu04" href="#">opção 4</a></li>
-                <li><a id="linkMenu05" href="#">opção 5</a></li>
+                <li><a class="linksMenu" href="#">Home</a></li>
+                <li><a class="linksMenu" href="#">User</a></li>
+                <li><a class="linksMenu" href="#">Temas</a></li>
+                <li><a class="linksMenu" href="#">Games</a></li>
+                <li><a class="linksMenu" href="#">About</a></li>
             </ul>
         </menu>
         
