Revert "Update mq05.html"
This reverts commit 497dede67544666dc391eda6f15a055c68cecf7f.

--- a/exercicios/ex026/mq05.html
+++ b/exercicios/ex026/mq05.html
@@ -12,7 +12,7 @@
 <body onresize="resizeView()">
     <header>
         <h1 id="tituloSite" >Meu site</h1>
-        <span id="iconMenu" class="material-icons">&#xe5d2</span>
+        <span id="iconMenu" class="material-icons" onclick="exbirMenu()">&#xe5d2</span>
         <div id="backgroundMenu" onclick="ocultarMenu()"></div>
         <menu id="menu">
             <ul id="ulMenu">
