Fiz a versão desktop
Fiz versão desktop exercício 26 Media Query 5

--- a/exercicios/ex026/mq05.html
+++ b/exercicios/ex026/mq05.html
@@ -16,11 +16,11 @@
         <div id="backgroundMenu" onclick="ocultarMenu()"></div>
         <menu id="menu">
             <ul id="ulMenu">
-                <li><a class="linksMenu" href="#">Home</a></li>
-                <li><a class="linksMenu" href="#">User</a></li>
-                <li><a class="linksMenu" href="#">Temas</a></li>
-                <li><a class="linksMenu" href="#">Games</a></li>
-                <li><a class="linksMenu" href="#">About</a></li>
+                <li><a id="linkMenu01" class="linksMenu" onclick="selecionar(0)" href="#">Home</a></li>
+                <li><a class="linksMenu" onclick="selecionar(1)" href="#">User</a></li>
+                <li><a class="linksMenu" onclick="selecionar(2)" href="#">Temas</a></li>
+                <li><a class="linksMenu" onclick="selecionar(3)" href="#">Games</a></li>
+                <li><a class="linksMenu" onclick="selecionar(4)" href="#">About</a></li>
             </ul>
         </menu>
         
